--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logo SIARSA<span>.</span></h1>
+        <img class="img-fluid" src="img/logo-siarsa.png" alt="">
+        <!-- <h1>Logo SIARSA<span>.</span></h1> -->
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li><a href="services.html">Servicios</a></li>
           <!-- <li><a href="projects.html">Projects</a></li> -->
