--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - About</title>
+  <title>SIARSA</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,8 +47,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>UpConstruction<span>.</span></h1>
+        <img src="img/logo-siarsa.png" alt=""> 
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
