--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li><a href="services.html">Servicios</a></li>
+          <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
+              <li><a href="#">Servicios 1</a></li>
+              <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">SubServicios 2</a></li>
+                  <li><a href="#">SubServicios 3</a></li>
+                  <li><a href="#">SubServicios 4</a></li>
+                  <li><a href="#">SubServicios 5</a></li>
+                  <li><a href="#">SubServicios 6</a></li>
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li><a href="#">Servicios 2</a></li>
+              <li><a href="#">Servicios 3</a></li>
+              <li><a href="#">Servicios 4</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
@@ -126,7 +126,7 @@
 
         <div class="row justify-content-between gy-4">
 
-          <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
+          <!-- <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>Expertos en HVAC & R.</h3>
               <p class="texto-justificado">Considerados como los mejores dentro del ramo con mas de $ años de experiencia.
@@ -166,12 +166,12 @@
 
               </div>
             </form>
-          </div><!-- End Quote Form -->
+          </div>
 
         </div>
 
       </div>
-    </section><!-- End Get Started Section -->
+    </section> -->
 
     <!-- ======= Constructions Section ======= -->
     <section id="constructions" class="constructions">
@@ -179,8 +179,7 @@
 
         <div class="section-header">
           <h2>Servicios SIARSA</h2>
-          <p class="texto-justificado">Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem
-            dolore earum</p>
+          <p class="texto-justificado">Contamos con una amplia gama de Servicios para que tus proyectos destaquen entre los demas</p>
         </div>
 
         <div class="row gy-4">
