--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <div class="card-body">
                     <h4 class="card-title">Eligendi omnis sunt veritatis.</h4>
                     <p class="texto-justificado">Fuga in dolorum et iste et culpa. Commodi possimus nesciunt modi voluptatem placeat deleniti
-                      adipisci. Cum delectus doloribus non veritatis. Officia temporibus illo magnam. Dolor eos et.</p>
+                      adipisci. Cum delectus doloribus non veritatis. Officia temporibus illo magnam. Dolor eos             .</p>
                   </div>
                 </div>
               </div>
