--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Contact</title>
+  <title>SIARSA - Contacto</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -104,7 +104,7 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
+<!-- 
         <div class="row gy-4">
           <div class="col-lg-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
@@ -112,23 +112,23 @@
               <h3>Nuestra Direcciòn</h3>
               <p>?????</p>
             </div>
-          </div><!-- End Info Item -->
+          </div><
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope"></i>
               <h3>Correo</h3>
-              <p>contacto@siarsa.com.mx</p>
+              <button type="submit"><a href="mailto:contacto@siarsa.com.mx">Enviar Correo</a></button>
             </div>
-          </div><!-- End Info Item -->
+          </div><
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
               <h3>Llamanos</h3>
-              <p>55 38495674</p>
+              <button type="submit"><a href="tel:+525512436257"><p>Llamar</p></button>
             </div>
-          </div><!-- End Info Item -->
+          </div>< -->
 
         </div>
 
@@ -141,6 +141,7 @@
           </div> -->
 
           <div class="col-lg-12">
+            <p class="texto-justificado"><h3 class="text-center">Dudas y comentarios, llena el formulario</h3></p>
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-lg-6 form-group">
@@ -178,7 +179,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
-    <div class="footer-content position-relative">
+    <!-- <div class="footer-content position-relative">
       <div class="container">
         <div class="row">
 
@@ -198,7 +199,7 @@
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End footer info column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
@@ -209,7 +210,7 @@
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
@@ -220,7 +221,7 @@
               <li><a href="#">Marketing</a></li>
               <li><a href="#">Graphic Design</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Hic solutasetp</h4>
@@ -231,7 +232,7 @@
               <li><a href="#">Dilecta</a></li>
               <li><a href="#">Sit quas consectetur</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nobis illum</h4>
@@ -242,16 +243,16 @@
               <li><a href="#">Trodelas</a></li>
               <li><a href="#">Flexo</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
