--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
-    <div class="footer-content position-relative">
+    <!-- <div class="footer-content position-relative">
       <div class="container">
         <div class="row">
 
@@ -1007,7 +1007,7 @@
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End footer info column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
@@ -1018,7 +1018,7 @@
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
@@ -1029,7 +1029,7 @@
               <li><a href="#">Marketing</a></li>
               <li><a href="#">Graphic Design</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Hic solutasetp</h4>
@@ -1040,7 +1040,7 @@
               <li><a href="#">Dilecta</a></li>
               <li><a href="#">Sit quas consectetur</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nobis illum</h4>
@@ -1051,16 +1051,16 @@
               <li><a href="#">Trodelas</a></li>
               <li><a href="#">Flexo</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados. <script>document.write(new Date().getFullYear())</script>
         </div>
         <!-- <div class="credits">
   
