--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
             <!-- <h2 data-aos="fade-down">SIARSA</h2> -->
             <img class="img-fluid" src="img/logo-siarsa.png">
             <!-- <p data-aos="fade-up">Expertos en HVAC & R.</p> -->
-            <br><br>
-            <br><br>
+            <br>
             <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Mas Información</a>
           </div>
         </div>
@@ -179,7 +178,7 @@
 
         <div class="section-header">
           <h2>Servicios SIARSA</h2>
-          <p class="texto-justificado">Contamos con una amplia gama de Servicios para que tus proyectos destaquen entre los demas</p>
+          <p class="texto-justificado">Contamos con una amplia gama de Servicios para que tus proyectos destaquen entre los demás</p>
         </div>
 
         <div class="row gy-4">
