--- a/about.html
+++ b/about.html
@@ -47,38 +47,39 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="img/logo-siarsa.png" alt=""> 
+        <img class="img-fluid" src="img/logo-siarsa.png" alt="">
+        <!-- <h1>Logo SIARSA<span>.</span></h1> -->
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <!-- <li><a href="services.html">Servicios</a></li> -->
+          <!-- <li><a href="projects.html">Projects</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
+              <li><a href="#">Servicios 1</a></li>
+              <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">SubServicios 2</a></li>
+                  <li><a href="#">SubServicios 3</a></li>
+                  <li><a href="#">SubServicios 4</a></li>
+                  <li><a href="#">SubServicios 5</a></li>
+                  <li><a href="#">SubServicios 6</a></li>
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li><a href="#">Servicios 2</a></li>
+              <li><a href="#">Servicios 3</a></li>
+              <li><a href="#">Servicios 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -91,13 +92,8 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>About</h2>
-        <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>About</li>
-        </ol>
-
-      </div>
+        <h2>Nosotros</h2>
+        </div>
     </div><!-- End Breadcrumbs -->
 
     <!-- ======= About Section ======= -->
