--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -55,8 +55,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html" class="active">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
@@ -105,25 +105,21 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Consequatur eius et magnam</h2>
+            <h2>Construyendo tu proyecto </h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
-              <h3>Our Story</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem.
-                Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur
-                laudantium temporibus dicta minus dolor.</p>
-              <ul>
+              <h3>Nuestra Historia</h3>
+              <p class="texto-justificado"> nació en el corazón de la revolución industrial, cuando la necesidad de controlar las condiciones ambientales se volvió esencial.</p>
+              <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-              </ul>
-              <p>Vitae autem velit excepturi fugit. Animi ad non. Eligendi et non nesciunt suscipit repellendus porro in
-                quo eveniet. Molestias in maxime doloremque.</p>
+              </ul> -->
+              <p class="texto-justificado">SIARSA se destaca por su contribución a los sistemas de aire acondicionado desarrollando e inovando en sistemas más eficientes y silenciosos.</p>
 
-              <div class="watch-video d-flex align-items-center position-relative">
+              <!-- <div class="watch-video d-flex align-items-center position-relative">
                 <i class="bi bi-play-circle"></i>
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox stretched-link">Watch Video</a>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -145,7 +141,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                   class="purecounter"></span>
-                <p>Happy Clients</p>
+                <p>Clientes Felices</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
@@ -156,7 +152,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                   class="purecounter"></span>
-                <p>Projects</p>
+                <p>Proyectos</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
@@ -167,7 +163,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1"
                   class="purecounter"></span>
-                <p>Hours Of Support</p>
+                <p>Soporte</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
@@ -178,7 +174,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
                   class="purecounter"></span>
-                <p>Hard Workers</p>
+                <p>Trabajadores</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
