--- a/contact.html
+++ b/contact.html
@@ -141,14 +141,15 @@
           </div> -->
 
           <div class="col-lg-12">
-            <p class="texto-justificado"><h3 class="text-center">Dudas y comentarios, llena el formulario</h3></p>
+            <p class="texto-justificado"><h3 class="text-center">¿Dudas y comentarios?</h3></p>
+            <p class="texto-justificado"><h3 class="text-center">Llena el formulario y nos comunicaremos a la brevedad</h3></p>
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-lg-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
                 </div>
                 <div class="col-lg-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Correos" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
                 </div>
               </div>
               <div class="form-group">
