--- a/about.html
+++ b/about.html
@@ -105,15 +105,15 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Construyendo tu proyecto </h2>
+            <h2></h2>
             <div class="our-story">
               <h3>Nuestra Historia</h3>
-              <p class="texto-justificado"> nació en el corazón de la revolución industrial, cuando la necesidad de controlar las condiciones ambientales se volvió esencial.</p>
-              <!-- <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-              </ul> -->
+              <p class="texto-justificado">Nació bajo la necesidad de controlar las condiciones ambientales se volvió esencial.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Contamos con las mejores estrategias de logística</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Distribución de equipos de alta tecnología</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Contamos instalación de Aire acondicionado en ambientes residenciales y comerciales e industriales</span></li>
+              </ul>
               <p class="texto-justificado">SIARSA se destaca por su contribución a los sistemas de aire acondicionado desarrollando e inovando en sistemas más eficientes y silenciosos.</p>
 
               <!-- <div class="watch-video d-flex align-items-center position-relative">
@@ -130,7 +130,7 @@
     <!-- End About Section -->
 
     <!-- ======= Stats Counter Section ======= -->
-    <section id="stats-counter" class="stats-counter section-bg">
+    <!-- <section id="stats-counter" class="stats-counter section-bg">
       <div class="container">
 
         <div class="row gy-4">
@@ -144,7 +144,7 @@
                 <p>Clientes Felices</p>
               </div>
             </div>
-          </div><!-- End Stats Item -->
+          </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
@@ -155,7 +155,7 @@
                 <p>Proyectos</p>
               </div>
             </div>
-          </div><!-- End Stats Item -->
+          </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
@@ -166,7 +166,7 @@
                 <p>Soporte</p>
               </div>
             </div>
-          </div><!-- End Stats Item -->
+          </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
@@ -177,12 +177,12 @@
                 <p>Trabajadores</p>
               </div>
             </div>
-          </div><!-- End Stats Item -->
+          </div>
 
         </div>
 
-      </div>
-    </section><!-- End Stats Counter Section -->
+      </div> -->
+    </section>
 
     <!-- ======= Alt Services Section ======= -->
     <section id="alt-services" class="alt-services">
@@ -193,16 +193,14 @@
             data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
-              laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
+            <h3>Personal Altamente Capacitado</h3>
+            <p>Contamos con el personal capacitado al 100% para desempeñar las actividades </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-easel flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
-                  non provident</p>
+                <p>Responsabilidad, Social, Eficacia Atención, calidad, Emmpatia, Leatla, Atencion, calidad</p>
               </div>
             </div><!-- End Icon Box -->
 
