--- a/about.html
+++ b/about.html
@@ -107,8 +107,8 @@
           <div class="col-lg-7">
             <h2></h2>
             <div class="our-story">
-              <h3>Nuestra Historia</h3>
-              <p class="texto-justificado">Nació bajo la necesidad de controlar las condiciones ambientales se volvió esencial.</p>
+              <h3>Sobre Nosotros</h3>
+              <p class="texto-justificado">Nace bajo la necesidad de controlar las condiciones ambientales se volvió esencial para la implementación de mejores sistemas.</p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Contamos con las mejores estrategias de logística</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Distribución de equipos de alta tecnología</span></li>
