--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
     <section id="get-started" class="get-started section-bg">
       <div class="container">
 
-        <div class="row justify-content-between gy-4">
+        <div class="justify-content-between gy-4">
 
-          <!-- <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
+          <div class="col-lg-8 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>Expertos en HVAC & R.</h3>
-              <p class="texto-justificado">Considerados como los mejores dentro del ramo con mas de $ años de experiencia.
+              <p class="texto-justificado">Considerados como los mejores dentro del ramo con mas de $ años de experiencia.</p>
               <p class="texto-justificado">Contamos con los mejores expertos en la materia para poder ofrecerte calidad en nuestro servicio.</p>
             </div>
           </div>
 
-          <div class="col-lg-5" data-aos="fade">
+          <!-- <div class="col-lg-5" data-aos="fade">
             <form action="forms/quote.php" method="post" class="php-email-form">
               <h3>Contactanos</h3>
               <p class="texto-justificado">Nuestro equipo se contactara a la brevedad posible.</p>
@@ -165,12 +165,12 @@
 
               </div>
             </form>
-          </div>
+          </div> -->
 
         </div>
 
       </div>
-    </section> -->
+    </section>
 
     <!-- ======= Constructions Section ======= -->
     <section id="constructions" class="constructions">
@@ -1053,7 +1053,7 @@
           </div>
 
         </div>
-      </div> -->
+      3</div> -->
     </div>
 
     <div class="footer-legal text-center position-relative">
