--- a/about.html
+++ b/about.html
@@ -193,34 +193,34 @@
             data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Personal Altamente Capacitado</h3>
+            <h3>Identidad SIARSA</h3>
             <p>Contamos con el personal capacitado al 100% para desempeñar las actividades </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
-              <i class="bi bi-easel flex-shrink-0"></i>
+              <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
+                <h4><a href="" class="stretched-link">Misión</a></h4>
                 <p>Responsabilidad, Social, Eficacia Atención, calidad, Emmpatia, Leatla, Atencion, calidad</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
+                <h4><a href="" class="stretched-link">Visión</a></h4>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                   deleniti atque</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Dine Pad</a></h4>
                 <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus
                   aut eligendi omnis</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
@@ -229,7 +229,7 @@
                 <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet.
                   Et eligendi</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
 
           </div>
         </div>
@@ -238,7 +238,7 @@
     </section><!-- End Alt Services Section -->
 
     <!-- ======= Alt Services Section 2 ======= -->
-    <section id="alt-services-2" class="alt-services section-bg">
+    <!-- <section id="alt-services-2" class="alt-services section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="row justify-content-around gy-4">
@@ -254,7 +254,7 @@
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
                   non provident</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-patch-check flex-shrink-0"></i>
@@ -263,7 +263,7 @@
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                   deleniti atque</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
@@ -272,7 +272,7 @@
                 <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus
                   aut eligendi omnis</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
@@ -281,7 +281,7 @@
                 <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet.
                   Et eligendi</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
           </div>
 
           <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services-2.jpg);" data-aos="zoom-in"
@@ -289,16 +289,15 @@
         </div>
 
       </div>
-    </section><!-- End Alt Services Section 2 -->
+    </section> -->
 
     <!-- ======= Our Team Section ======= -->
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Team</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis
-            omnis tiledo stran delop</p>
+          <h2>Nuestro Equipo </h2>
+          <p>Contamos con Especialistas en el ramo para que tu proyecto sea el más destacable.</p>
         </div>
 
         <div class="row gy-5">
@@ -314,8 +313,8 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Ing. Mario Rodriguez</h4>
+              <span>CEO SIARSA</span>
               <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow
               </p>
             </div>
@@ -332,7 +331,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Sarah Jhonson</h4>
+              <h4>Hector Ortega</h4>
               <span>Product Manager</span>
               <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem
                 ut</p>
@@ -350,7 +349,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>William Anderson</h4>
+              <h4>Juan Carlos Florida</h4>
               <span>CTO</span>
               <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis
                 at qui</p>
@@ -368,7 +367,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Amanda Jepson</h4>
+              <h4>Ofelia Ortega</h4>
               <span>Accountant</span>
               <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam
                 consectetur</p>
@@ -386,14 +385,15 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Brian Doe</h4>
+              <h4>Iván Landaverde
+              </h4>
               <span>Marketing</span>
               <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit
                 laborum velit</p>
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
               <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -409,7 +409,7 @@
               <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi
                 cupiditate vel</p>
             </div>
-          </div><!-- End Team Member -->
+          </div -->
 
         </div>
 
