--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Misión</a></h4>
-                <p>Responsabilidad, Social, Eficacia Atención, calidad, Emmpatia, Leatla, Atencion, calidad</p>
+                <p class="texto-justificado">Nuestra misión en SIARSA es proporcionar soluciones de aire acondicionado y sistemas de refrigeración de alta calidad y eficiencia para nuestros clientes. Nos dedicamos a crear ambientes confortables y seguros, tanto en hogares como en empresas, mediante la innovación tecnológica y un servicio excepcional. Estamos comprometidos con la satisfacción del cliente, la sostenibilidad ambiental y el desarrollo continuo de nuestros empleados y socios comerciales.</p>
               </div>
             </div>
 
@@ -208,8 +208,7 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Visión</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                  deleniti atque</p>
+                <p class="texto-justificado">Nos esforzamos por ser líderes en el mercado de aire acondicionado y sistemas de refrigeración, reconocidos por nuestra excelencia en productos y servicios. Nos visualizamos como una empresa global que impulsa la innovación en tecnologías de climatización, contribuyendo así a un mundo más cómodo y sostenible. Aspiramos a establecer relaciones a largo plazo con nuestros clientes, basadas en la confianza mutua y el respeto, y a ser un empleador preferido que fomente el crecimiento profesional y personal de nuestros empleados. Además, nos comprometemos a ser responsables con el medio ambiente, adoptando prácticas empresariales ecoamigables y promoviendo la conciencia ambiental en todas nuestras operaciones y productos.</p>
               </div>
             </div>
 
